# gold_up

./: .gitignore  README.md  pyproject.toml  temp.md  validate_selected.py  フロー.md  ルール.md  ログインのサンプル.md  参考yaml構成.md  手足.md  皮.md  肉.md  骨格.md
.windsurf/rules/: coading-rule.md  cording-rules.md  goal.md  ja-answer.md  no-Typer.md  talk.md  uv-run.md  yaml-name.md
autotrade_poc/app/: login.py  runner.py
autotrade_poc/configs/: mt5_settings.py  settings.py
autotrade_poc/domain/models/: ensemble.py  events.py  market.py  order.py  risk.py  spec.py  stops.py
autotrade_poc/infrastructure/adapters/: mt5_broker_adapter.py  mt5_marketdata_adapter.py  std_logger_adapter.py  system_clock_adapter.py  yaml_registry_adapter.py
autotrade_poc/ports/: broker_port.py  clock_port.py  logger_port.py  marketdata_port.py  registry_port.py
autotrade_poc/tests/: test_domain_models.py  test_mt5_optional.py  test_start_autotrade_uc.py  test_std_logger_adapter.py  test_system_clock_adapter.py  test_yaml_registry_adapter.py
autotrade_poc/usecase/: start_autotrade_uc.py
configs/deploy/: selection.yaml
configs/strategy/: rolling_profiles copy.yaml  rolling_profiles.yaml  spec.yaml  spec_rsi_bb.yaml  spec_rsi_close_cross_bb.yaml  spec_rsi_close_cross_bb_atr.yaml  spec_rsi_close_cross_bb_audusd.yaml  spec_rsi_close_cross_bb_eurjpy.yaml  spec_rsi_close_cross_bb_hard_flat.yaml  spec_rsi_close_gt_bb.yaml  spec_rsi_close_gt_bb_audusd.yaml  spec_rsi_close_gt_bb_eurjpy.yaml  spec_rsi_close_gt_bb_ps1.yaml  spec_rsi_only.yaml  spec_rsi_sma.yaml  spec_verify_rsi.yaml
deploy/: deploy.yaml
knowledge/: 純関数の内容について.md
runs/: spec.lock.json
tools/: collect_sources.py  mt5_to_parquet_once.py  run_backtest_smoke.py
trade_app/: __main__.py  main.py
trade_app/adapters/deploy/: ensemble_exporter.py
trade_app/adapters/mt5/: mt5_history_adapter.py
trade_app/adapters/optimizer/: optuna_optimizer.py
trade_app/adapters/parquet/: parquet_sink_adapter.py
trade_app/adapters/results/: deploy_exporter_file.py  file_results_sink.py  lock_sink_file.py
trade_app/adapters/sampler/: sobol_sampler.py
trade_app/adapters/universe/: config_universe.py  default_universe.py  mt5_universe.py
trade_app/adapters/vbtpro/: backtest_adapter.py  data_feed_adapter.py  vbtpro_bindings.py
trade_app/adapters/yaml/: spec_loader_yaml.py
trade_app/apps/backtest/: usecases.py
trade_app/apps/deploy/: cli_selector.py  publish_selected.py
trade_app/apps/features/: feature_calc.py
trade_app/apps/ingest/: usecases.py
trade_app/apps/kernel/: decide_core.py  plan_contracts.py
trade_app/apps/research/: cli.py  orchestrator.py  orchestrator_save.py
trade_app/apps/trade/: cli.py
trade_app/config/: defaults.py
trade_app/domain/: errors.py
trade_app/domain/dto/: feature_bundle.py  ingest_result.py  ohlcv_frame.py  pipeline_full_output.py  pipeline_output.py  plan_models.py  signals.py
trade_app/domain/ports/: backtest.py  data_feed.py  deploy_exporter.py  ensemble.py  entry_gate.py  execution.py  feature_calc.py  history_source.py  lock_sink.py  optimizer.py  parquet_sink.py  plan_builder.py  results_sink.py  sampler.py  scorer.py  session_policy.py  spec_loader.py  split_strategy.py  splitter_purged.py  universe.py
trade_app/domain/services/: decider.py  ingest_transformer.py  selection_service.py
trade_app/domain/value_objects/: mt5_credentials.py
trade_app/shared/: logging.py  settings.py
trade_app/tests/backtest/: test_backtest_adapter.py  test_backtest_flow_e2e.py
trade_app/tests/integration_mt5/: test_mt5_ingest_e2e.py
trade_app/tests/kernel/: test_decide_core.py
trade_app/tests/src1/: test_ingest_transformer.py  test_ingest_usecase_e2e.py  test_parquet_sink_adapter.py
trade_app/tests/src1_explorer/: test_batch_runner_fake_e2e.py  test_explorer_loop.py  test_lock_sink_file.py  test_spec_binding.py  test_universe_config_adapter.py
trade_app/tests/src1_policies/: test_position_limiter.py
trade_app/tests/src1_research/: test_backtest_adapter_vbtpro.py  test_metrics_aggregator.py  test_metrics_enricher.py  (+5 more)
trade_app/utils/: timing.py
(+63 files in other folders)
