[project]
name = "autotrade-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "tzdata>=2024.1",
  "MetaTrader5>=5.0; platform_system == 'Windows'",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.7",
  "black>=24.8.0",
  "mypy>=1.10.0",
  "isort>=5.13.2",
  "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_reexport = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.11",
]
